--- a/NameClick.html
+++ b/NameClick.html
@@ -56,7 +56,7 @@
 
       fullName = fullName.trim();
 
-      alert(((fullName != "") ? "Hello, " + fullName + "!" : "Hello!") + " You clicked the \"" + buttonName + "\" button");
+      alert(((fullName != "") ? "Hello, " + fullName + "!" : "Hello stranger!") + " You clicked the \"" + buttonName + "\" button");
     }
   </script>
 </html>
